--- a/package.json
+++ b/package.json
@@ -49,21 +49,22 @@
     "!*/__tests__"
   ],
   "dependencies": {
-    "@loopback/boot": "^3.4.0",
-    "@loopback/core": "^2.16.0",
-    "@loopback/repository": "^3.6.0",
-    "@loopback/rest": "^9.3.0",
-    "@loopback/rest-explorer": "^3.3.0",
-    "@loopback/service-proxy": "^3.2.0",
+    "@loopback/boot": "^3.4.1",
+    "@loopback/core": "^2.16.1",
+    "@loopback/repository": "^3.7.0",
+    "@loopback/rest": "^9.3.1",
+    "@loopback/rest-explorer": "^3.3.1",
+    "@loopback/service-proxy": "^3.2.1",
+    "loopback-connector-mongodb": "^5.5.0",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
-    "@loopback/build": "^6.4.0",
+    "@loopback/build": "^6.4.1",
     "source-map-support": "^0.5.19",
-    "@loopback/testlab": "^3.4.0",
-    "@types/node": "^10.17.59",
-    "@loopback/eslint-config": "^10.2.0",
-    "eslint": "^7.25.0",
-    "typescript": "~4.2.4"
+    "@loopback/testlab": "^3.4.1",
+    "@types/node": "^10.17.60",
+    "@loopback/eslint-config": "^10.2.1",
+    "eslint": "^7.28.0",
+    "typescript": "~4.3.2"
   }
 }
