--- a/package.json
+++ b/package.json
@@ -49,12 +49,20 @@
     "!*/__tests__"
   ],
   "dependencies": {
+    "@loopback/authentication": "^7.3.1",
+    "@loopback/authentication-jwt": "^0.9.1",
     "@loopback/boot": "^3.4.0",
     "@loopback/core": "^2.16.0",
     "@loopback/repository": "^3.6.0",
     "@loopback/rest": "^9.3.0",
     "@loopback/rest-explorer": "^3.3.0",
+    "@loopback/security": "^0.5.1",
     "@loopback/service-proxy": "^3.2.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/lodash": "^4.14.170",
+    "bcryptjs": "^2.4.3",
+    "lodash": "^4.17.21",
+    "loopback-connector-rest": "^4.0.1",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
